@@ -5,6 +5,8 @@ crystal-facet-uml (1.31.0) UNRELEASED; urgency=medium
   * icon alignment in classifiers is not rounded to int anymore
   * use case circles do not cut into label texts
   * decision/choice rhombus do not cut into label texts
+  * send signal arrows do not cut into label texts
+  * accept event flags do not cut into label texts
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 30 Jul 2021 09:00:00 +0200
 
